@@ -1389,6 +1389,19 @@ static const canon_cap_t canon_model_capabilities[] =
     NULL,
     NULL
   },
+  { /* Canon MULTIPASS MP360/370/375R/390 */
+    "PIXMA MP360", 3,          /*model, model_id*/
+    842, 17*72,       /* max paper width and height */
+    10, 10, 15, 15,    /*border_left, border_right, border_top, border_bottom */
+    &canon_MULTIPASS_MP170_slotlist, /* these models only have an auto sheet feeder */
+    CANON_CAP_STD0|CANON_CAP_px|CANON_CAP_P|CANON_CAP_I,0,control_cmd_PIXMA_iP2700,  /*features */
+    &canon_MULTIPASS_MP360_modelist,
+    &canon_MULTIPASS_MP360_paperlist,
+    NULL,
+    NULL,
+    NULL,
+    iP4500_channel_order
+  },
   { /* Canon MULTIPASS MP450 */
     "PIXMA MP450", 3,          /*model, model_id*/
     842, 17*72,       /* max paper width and height */
